selfhost/test/parser/match_error_case_bad_path.out
Error at %FILE_NAME%:1:16
Unexpected token '[', expected one of 'identifier', '=>':
  |  match foo { A.b[0].c => 123 }
                    ^