selfhost/test/parser/match_error_case_bad_path.abra
match foo { A.b[0].c => 123 }